# CuidaTuFocus

./: PRD-CuidaTuFocus.md  SPEC.md  index.html  package-lock.json  package.json  planificacion-app.md  tailwind.config.js  vite.config.ts
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/__tests__/: setup.ts
src/__tests__/components/: ui.test.tsx
src/__tests__/stores/: appStore.test.ts
src/components/: Layout.tsx  NotificationToast.tsx  Sidebar.tsx  Topbar.tsx  ui.tsx
src/pages/: Apps.tsx  Dashboard.tsx  Historial.tsx  Horarios.tsx  Settings.tsx  index.ts
src/stores/: appStore.ts
src/types/: index.ts
