[package]
name = "cuidatufocus"
version = "1.0.0"
description = "App de escritorio para bloquear videojuegos y mantener el foco"
authors = ["CuidaTuFocus"]
edition = "2021"

[lib]
name = "cuidatufocus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
dirs = "5"
bcrypt = "0.15"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem"
] }
